# ardusub_driver

./: .clang-tidy  .codespellrc  .dockerignore  .gitignore  .pre-commit-config.yaml  README.md
.devcontainer/: Dockerfile
.devcontainer/nouveau/: Dockerfile  devcontainer.json
.devcontainer/nvidia/: Dockerfile  devcontainer.json
.docker/: Dockerfile
.github/workflows/: ci.yml  docker.yml  format.yml
ardusub_bringup/: CMakeLists.txt  package.xml
ardusub_bringup/launch/: ardusub.launch.yaml  ns_ardusub.launch.yaml  sitl.launch.yaml  sitl_multi_robot.launch.yaml
ardusub_manager/: CMakeLists.txt  README.md  package.xml
ardusub_manager/launch/: ardusub_manager.launch.py
ardusub_manager/src/: ardusub_manager.cpp  ardusub_manager.hpp  ardusub_manager_parameters.yaml
ardusub_teleop/: CMakeLists.txt  README.md  package.xml
ardusub_teleop/config/: joy_teleop.yaml
ardusub_teleop/include/ardusub_teleop/: joy_interface.hpp
ardusub_teleop/launch/: joy_interface.launch.yaml  teleop.launch.yaml
ardusub_teleop/src/: joy_interface.cpp
controller_coordinator/: package.xml
controller_coordinator/src/: coordinator.cpp  coordinator.hpp  coordinator_parameters.yaml
example_pkg/: package.xml
mavros_odom_sensor/: CMakeLists.txt  mavros_odom_sensor.xml  package.xml
mavros_odom_sensor/include/mavros_odom_sensor/: mavros_odom_sensor.hpp  visibility_control.h
mavros_odom_sensor/src/: mavros_odom_sensor.cpp
thruster_hardware/: CMakeLists.txt  README.md  package.xml  thruster_hardware.xml
thruster_hardware/include/thruster_hardware/: hardware.hpp  odom_subscriber.hpp  thruster_hardware.hpp  visibility_control.h
thruster_hardware/src/: hardware.cpp  test_odom_subs.cpp  thruster_hardware.cpp
